# cmtraceopen

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DSREGCMD_TROUBLESHOOTING.md  FEATURE_IMPROVEMENTS.md  README.md  index.html  package-lock.json  package.json  plan-winEvtLiveEventLogsAndLocalTimeDisplay.prompt.md  windows_build_from_source.md
.claude/: settings.local.json
.github/workflows/: codesign.yml
docs/plans/: 2026-03-23-error-lookup-impl-plan.md  2026-03-23-error-lookup-redesign-design.md
references/collection/: Detect-CmtraceEvidenceBootstrap.ps1  (+5 more)
scripts/: Launch-CMTraceOpen.ps1
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: profile_folder.rs
src-tauri/src/: lib.rs  menu.rs
src-tauri/src/commands/: deployment.rs  dsregcmd.rs  error_lookup.rs  file_ops.rs  fonts.rs  intune.rs  mod.rs  system_preferences.rs
src-tauri/src/dsregcmd/: connectivity.rs  event_logs.rs  mod.rs  models.rs  parser.rs  registry.rs  rules.rs
src-tauri/src/error_db/: codes.rs  lookup.rs
src-tauri/src/intune/: download_stats.rs  event_tracker.rs  eventlog_win32.rs  evtx_parser.rs  guid_registry.rs  ime_parser.rs  mod.rs  models.rs
src-tauri/src/macos_diag/: packages.rs  profiles.rs
src-tauri/src/models/: log_entry.rs
src-tauri/src/parser/: cbs.rs  ccm.rs  detect.rs  dism.rs  mod.rs  msi.rs  panther.rs  plain.rs  psadt.rs  reporting_events.rs  simple.rs  timestamped.rs
src-tauri/src/state/: app_state.rs
src-tauri/src/watcher/: tail.rs
src-tauri/tests/: parser_regression_corpus.rs
(+69 files in other folders)
