[package]
name = "cmtrace-open"
version = "0.2.0"
description = "Open-source CMTrace log viewer with Intune diagnostics"
authors = ["Adam Gell"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"
log = "0.4"
notify = "7"
tokio = { version = "1", features = ["fs", "io-util", "sync", "rt"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[[bench]]
name = "intune_pipeline"
harness = false
